# android_test_demo

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
baseModule/: build.gradle
benchmarkDemo/: build.gradle
drawtext/: build.gradle  proguard-rules.pro
drawtext/apk/: output.json  test_app_release_v1.0_2020年06月05日14点53分.apk
mab/: CMakeLists.txt  build.gradle
mab/src/androidTest/java/com/demo/mab/: ExampleInstrumentedTest.java
mab/src/main/: AndroidManifest.xml
mab/src/main/cpp/: NativeMP3Decoder.h  jni_mad_mp3_wrap.cpp
mab/src/main/java/com/chilkatsoft/: CkEmail.java  CkFileAccess.java  CkFtp2.java  CkHttp.java  CkRest.java  CkSFtp.java  CkScp.java  CkSocket.java  CkSsh.java  chilkatJNI.java
mab/src/main/java/com/demo/mab/: App.java  BinUtils.java  DpPxUtils.java  FlashStateImp.java  Main2Activity.java  MainActivity.java  MyReceiver.java  ScreenUtils.java  VoiceFlashView.java
mab/src/main/java/com/mp3/android/nativeJNI/: NativeMP3Decoder.java  NativeMp3Encoder.java  NativeTcpSocket.java
mab/src/main/res/layout/: activity_lame.xml  activity_main.xml  activity_main2.xml  layout_notification.xml
mab/src/main/res/values/: strings.xml
mab/src/test/java/com/demo/mab/: ExampleUnitTest.java
myapplication/: CMakeLists.txt  build.gradle
myapplication/src/main/: AndroidManifest.xml
myapplication/src/main/cpp/: mp3.cpp
myapplication/src/main/java/com/demo/myapplication/: DetecteSDK.java  FaceActivity.java  PlayProgressView.java  RxActivity.java  ScrollingActivity.java  ZoomImageView.java
myapplication/src/main/java/com/demo/myapplication/face/: FaceView.java
myapplication/src/main/res/drawable/: gap_circle.xml  ic_lock_black_24dp.xml  ic_pause_black_24dp.xml  ic_play_arrow_black_24dp.xml  rec_face.xml  shaep_white_strok_cirlce.xml
myapplication/src/main/res/layout/: activity_face.xml  activity_scrolling.xml
myapplication/src/main/res/values/: attrs.xml
myapplication2/: build.gradle
mylibrary/: build.gradle
pdfreader/: build.gradle
restfulrxjavaexample/: build.gradle
testappprocess/: build.gradle
testbottomnavigationview/: build.gradle
testmakemad/: CMakeLists.txt  build.gradle
testmakemad/src/androidTest/java/com/demo/testmakemad/: ExampleInstrumentedTest.java
testmakemad/src/main/: AndroidManifest.xml
testmakemad/src/main/java/com/demo/testmakemad/: MainActivity.java  NativeMP3Decoder.java
testmakemad/src/main/jni/mad/: NativeMP3Decoder.c  NativeMP3Decoder.h  android_decoder.cpp  android_decoder.h  jni_mp3_wrap.cpp
testmakemad/src/main/res/layout/: activity_main.xml
testmakemad/src/main/res/values/: strings.xml
testvideoprocess/: build.gradle  readme.txt
tools/: build.gradle
(+191 files in other folders)
